--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-globe.gl": "^2.33.2",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
